# quickping-221

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
quickping/: __main__.py
tests/: test_quickping.py
