[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickping"
version = "0.1.0"
description = "Tiny ping CLI – pure Python, no dependencies"
readme = "README.md"
authors = [{name = "TopherBot", email = "topherbot@proton.me"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
quickping = "quickping.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]